2017/01/11
    The System.Module is marked with `__ObjMethodAttr__{ Inheritable = true }`.

2016/12/24
    System.Collections.ObjectArray is finished, used to handle a group of same type objects, can be used to bind event handlers to all objects. The System.Collections.ObjectArray is object method attribute enabled, so it's useful to bind attribute for event handlers :

        import "System"
        import "System.Threading"
        import "System.Collections"

        class "Person" { Name = { Type = String, Event = "OnNameChanged" } }

        oArr = ObjectArray(Person, Person{ Name = "Ann" })

        -- Bind event handler to the array's object
        __Thread__()
        function oArr:OnNameChanged(new, old)
            print(old , "->", new)
        end

        oArr:Insert(Person{ Name = "AAA"} )

        -- Set all object's name to None
        oArr:Each("Name", "None")


2016/12/20
    System.Object is removed from Core, there is no need to provide a root class in PLoop system. The framework should do it by themselves.

2016/12/15
    Change the `System.__Arguments__`'s Priorty to lower and SubLevel to -9999, since it'd change the returned function, the lowest is used for attributes that won't change the contents(like register).

    Fix the multi-attribute for methods not work.

2016/12/14
    Fix System.Recycle to be a pure table manager.

2016/12/09
    `System.__NoAutoSet__` attribute is added, used to block the assignment to the object directly.

2016/12/04
    Rename `__ObjectMethodAttributeEnabled__` to `__ObjMethodAttr__` for simple using.

2016/12/01
    The attribute has *Priority* and *SubLevel* property now, they are used to decided the order of the attribute's applied process.

    Many methods removed from the *System.Reflector*, since they can be replaced by attribute's methods.

2016/11/24
    Re-design the property system, disable the PLOOP_SAVE_MEMORY(default disabled) mode will speed up the property's access by 10%-30%.

2016/11/21